[package]
name = "raytrace-voxels"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.9.1"
glam = "0.20.5"
image = "0.24.2"
pollster = "0.2.5"
rand = "0.8.5"
rayon = "1.5.3"
wgpu = "0.12.0"
winit = "0.26.1"
