[package]
name = "raytrace-voxels"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.9.1", features = ["derive"] }
glam = { version = "0.21.1", features = ["bytemuck"] }
image = "0.24.2"
pollster = "0.2.5"
rand = "0.8.5"
rayon = "1.5.3"
wgpu = "23.0.1"
winit = "0.30.7"
