[package]
name = "raytrace-voxels"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
bytemuck = { version = "1.9.1", features = ["derive"] }
glam = { version = "0.21.1", features = ["bytemuck"] }
image = "0.24.2"
ndarray = { version = "0.16.1", features = ["rayon"] }
noise = "0.9.0"
ordered-float = "4.6.0"
pollster = "0.2.5"
rand = "0.8.5"
rayon = "1.5.3"
slotmap = "1.0.7"
wgpu = "23.0.1"
winit = "0.30.7"
